--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.iu</groupId>
-    <artifactId>industrielle-inf-systeme-01</artifactId>
+    <artifactId>jsf-course</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>industrielle-inf-systeme-01</name>
+    <name>jsf-course</name>
     <packaging>war</packaging>
 
     <properties>
